// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when creating token 1`] = `
.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c9 {
  min-width: 0;
}

.c14 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c18 {
  padding-right: 56px;
  padding-left: 56px;
}

.c20 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c38 {
  padding-right: 16px;
  padding-left: 16px;
}

.c40 {
  padding-left: 12px;
}

.c44 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c47 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c50 {
  background: #ffffff;
  padding: 16px;
}

.c69 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c51 {
  border-radius: 4px;
}

.c53 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c55 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c57 {
  background: transparent;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c62 {
  background: #dcdce4;
  border-radius: 50%;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c64 {
  color: #666687;
  width: 0.6875rem;
}

.c67 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c19 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

.c21 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c25 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c48 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c56 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 12px;
}

.c63 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c17 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c22 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c26 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c28 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c39 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c43 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c49 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c60 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #4945ff;
}

.c61 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #4a4a6a;
}

.c52 {
  border: 1px solid #f6f6f9;
}

.c52:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c52:hover:not([aria-disabled='true']) .c11 {
  color: #4945ff;
}

.c52:hover:not([aria-disabled='true']) > .c7 {
  background: #f0f0ff;
}

.c52:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c66 {
  border: 1px solid #ffffff;
}

.c66:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c66:hover:not([aria-disabled='true']) .c11 {
  color: #4945ff;
}

.c66:hover:not([aria-disabled='true']) > .c7 {
  background: #f0f0ff;
}

.c66:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c65 path {
  fill: #666687;
}

.c58 {
  border: none;
  position: relative;
  outline: none;
}

.c58[aria-disabled='true'] {
  pointer-events: none;
}

.c58[aria-disabled='true'] svg path {
  fill: #666687;
}

.c58 svg path {
  fill: #4945ff;
}

.c58:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c58:focus-visible {
  outline: none;
}

.c58:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c59 {
  text-align: left;
}

.c59 > span {
  max-width: 100%;
}

.c59 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c59 svg path {
  fill: #8e8ea9;
}

.c54 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c54:hover svg path {
  fill: #4945ff;
}

.c15 {
  position: relative;
  outline: none;
}

.c15 svg {
  height: 12px;
  width: 12px;
}

.c15 svg > g,
.c15 svg path {
  fill: #ffffff;
}

.c15[aria-disabled='true'] {
  pointer-events: none;
}

.c15:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c15:focus-visible {
  outline: none;
}

.c15:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c70 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c16 {
  height: 2rem;
}

.c16[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c16[aria-disabled='true'] .c11 {
  color: #666687;
}

.c16[aria-disabled='true'] svg > g,.c16[aria-disabled='true'] svg path {
  fill: #666687;
}

.c16[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c16[aria-disabled='true']:active .c11 {
  color: #666687;
}

.c16[aria-disabled='true']:active svg > g,.c16[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c16:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c16:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c16 svg > g,
.c16 svg path {
  fill: #ffffff;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c29 {
  line-height: 0;
}

.c31 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c31::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c31::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c31:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c31::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c31[aria-disabled='true'] {
  color: inherit;
}

.c31:focus {
  outline: none;
  box-shadow: none;
}

.c30 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c30:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c35 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c35:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c41 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c41 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c41 svg path {
  fill: #666687;
}

.c42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c42 svg {
  width: 0.375rem;
}

.c36 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c36:focus {
  outline: none;
}

.c36[data-disabled] {
  cursor: not-allowed;
}

.c37 {
  width: 100%;
}

.c23 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c45 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c24 {
  grid-column: span 6;
  max-width: 100%;
}

.c46 {
  grid-column: span 7;
  max-width: 100%;
}

.c68 {
  grid-column: span 5;
  max-width: 100%;
}

.c0:focus-visible {
  outline: none;
}

.c33 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c33:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c34 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c34::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34:focus-within {
  outline: none;
}

.c32 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c32 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c32 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c32 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c32 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c4 {
  padding-right: 8px;
}

.c6 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c3 svg path {
  fill: #4945ff;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width:68.75rem) {
  .c24 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c24 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c46 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c46 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c68 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c68 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c4 c5"
              >
                <svg
                  fill="none"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 0 1-.2.2H5.74l8.239 8.239a.2.2 0 0 1 0 .282L12.14 23.86a.2.2 0 0 1-.282 0L.14 12.14a.2.2 0 0 1 0-.282L11.86.14a.2.2 0 0 1 .282 0L13.98 1.98a.2.2 0 0 1 0 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6Z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c6"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c7 c8"
          >
            <div
              class="c7 c9 c10"
            >
              <h1
                class="c11 c12"
              >
                Create API Token
              </h1>
            </div>
            <div
              class="c7 c13"
            >
              <button
                aria-disabled="false"
                class="c7 c14 c13 c15 c16"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <svg
                    fill="none"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 0 1 .286 0l2.85 2.89a.2.2 0 0 1 0 .28L9.554 20.854a.2.2 0 0 1-.285 0l-9.13-9.243a.2.2 0 0 1 0-.281l2.85-2.892a.2.2 0 0 1 .284 0l6.14 6.209L20.726 2.97Z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c11 c17"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c18"
      >
        <div
          class="c7 c19"
        >
          <div
            class="c20"
          >
            <div
              class="c7 c21"
            >
              <h2
                class="c11 c22"
              >
                Details
              </h2>
              <div
                class="c23"
              >
                <div
                  class="c24"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class=""
                      >
                        <div
                          class="c7 c25"
                        >
                          <label
                            class="c11 c26 c27"
                            for="1"
                          >
                            Name
                            <span
                              class="c11 c28 c29"
                            >
                              *
                            </span>
                          </label>
                          <div
                            class="c7 c8 c30"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              aria-required="true"
                              class="c31"
                              id="1"
                              name="name"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c24"
                >
                  <div
                    class=""
                  >
                    <div
                      class="c32"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="c7 c25"
                        >
                          <div
                            class="c7 c10"
                          >
                            <label
                              class="c11 c26 c27"
                              for="3"
                            >
                              Description
                            </label>
                          </div>
                          <div
                            class="c33"
                          >
                            <textarea
                              aria-invalid="false"
                              aria-required="false"
                              class="c34"
                              id="3"
                              name="description"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c24"
                >
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="c7 c25"
                      >
                        <label
                          class="c11 c26 c27"
                          for="5"
                        >
                          Token duration
                          <span
                            class="c11 c28 c29"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="c7 c10 c35"
                        >
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="5 5-label 5-content"
                            aria-required="true"
                            class="c36"
                            id="5"
                            name="lifespan"
                            role="combobox"
                            type="button"
                          />
                          <div
                            class="c7 c8 c37"
                          >
                            <div
                              class="c7 c10"
                            >
                              <div
                                class="c38"
                              >
                                <span
                                  class="c11 c39"
                                  id="5-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c7 c10"
                            >
                              <button
                                aria-hidden="true"
                                class="c40 c41 c42"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1rem"
                                  viewBox="0 0 14 8"
                                  width="1rem"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c11 c43"
                    />
                  </div>
                </div>
                <div
                  class="c24"
                >
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="c7 c25"
                      >
                        <label
                          class="c11 c26 c27"
                          for="7"
                        >
                          Token type
                          <span
                            class="c11 c28 c29"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="c7 c10 c35"
                        >
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="7 7-label 7-content"
                            aria-required="true"
                            class="c36"
                            id="7"
                            name="type"
                            role="combobox"
                            type="button"
                          />
                          <div
                            class="c7 c8 c37"
                          >
                            <div
                              class="c7 c10"
                            >
                              <div
                                class="c38"
                              >
                                <span
                                  class="c11 c39"
                                  id="7-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c7 c10"
                            >
                              <button
                                aria-hidden="true"
                                class="c40 c41 c42"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1rem"
                                  viewBox="0 0 14 8"
                                  width="1rem"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c44 c45"
          >
            <div
              class="c46"
            >
              <div
                class="c47"
              >
                <div
                  class="c7 c48"
                >
                  <h2
                    class="c11 c22"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c11 c49"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c50"
                >
                  <div
                    aria-disabled="false"
                    class="c51 c52"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c7 c53 c8 c54"
                    >
                      <div
                        class="c7 c55 c56"
                      >
                        <button
                          aria-controls="accordion-content-8"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-8"
                          class="c7 c57 c13 c58 c59"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c11 c60"
                          >
                            <span
                              class="c11 c61"
                              id="accordion-label-8"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c7 c56"
                        >
                          <span
                            aria-hidden="true"
                            class="c7 c62 c63"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c64 c65"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c51 c66"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c7 c67 c8 c54"
                    >
                      <div
                        class="c7 c55 c56"
                      >
                        <button
                          aria-controls="accordion-content-9"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-9"
                          class="c7 c57 c13 c58 c59"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c11 c60"
                          >
                            <span
                              class="c11 c61"
                              id="accordion-label-9"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c7 c56"
                        >
                          <span
                            aria-hidden="true"
                            class="c7 c62 c63"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c64 c65"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c68"
            >
              <div
                class="c69"
                style="min-height: 100%;"
              >
                <div
                  class="c7 c48"
                >
                  <h3
                    class="c11 c22"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c11 c49"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c70"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when editing existing token 1`] = `
.c9 {
  min-width: 0;
}

.c14 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c19 {
  padding-right: 56px;
  padding-left: 56px;
}

.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c21 {
  background: #ffffff;
  padding: 24px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c22 {
  background: #f6f6f9;
  padding: 12px;
  border-radius: 4px;
}

.c28 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c45 {
  padding-right: 16px;
  padding-left: 16px;
}

.c47 {
  padding-left: 12px;
}

.c54 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c57 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c59 {
  background: #ffffff;
  padding: 16px;
}

.c78 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c60 {
  border-radius: 4px;
}

.c62 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c64 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c66 {
  background: transparent;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c71 {
  background: #dcdce4;
  border-radius: 50%;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c73 {
  color: #666687;
  width: 0.6875rem;
}

.c76 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c20 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

.c24 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c29 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c58 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c65 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 12px;
}

.c72 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c17 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c25 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 500;
  color: #32324d;
}

.c27 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c30 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c33 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c35 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c46 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c50 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c52 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c69 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #4945ff;
}

.c70 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #4a4a6a;
}

.c61 {
  border: 1px solid #f6f6f9;
}

.c61:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c61:hover:not([aria-disabled='true']) .c11 {
  color: #4945ff;
}

.c61:hover:not([aria-disabled='true']) > .c7 {
  background: #f0f0ff;
}

.c61:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c75 {
  border: 1px solid #ffffff;
}

.c75:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c75:hover:not([aria-disabled='true']) .c11 {
  color: #4945ff;
}

.c75:hover:not([aria-disabled='true']) > .c7 {
  background: #f0f0ff;
}

.c75:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c74 path {
  fill: #666687;
}

.c67 {
  border: none;
  position: relative;
  outline: none;
}

.c67[aria-disabled='true'] {
  pointer-events: none;
}

.c67[aria-disabled='true'] svg path {
  fill: #666687;
}

.c67 svg path {
  fill: #4945ff;
}

.c67:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c67:focus-visible {
  outline: none;
}

.c67:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c68 {
  text-align: left;
}

.c68 > span {
  max-width: 100%;
}

.c68 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c68 svg path {
  fill: #8e8ea9;
}

.c63 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c63:hover svg path {
  fill: #4945ff;
}

.c15 {
  position: relative;
  outline: none;
}

.c15 svg {
  height: 12px;
  width: 12px;
}

.c15 svg > g,
.c15 svg path {
  fill: #ffffff;
}

.c15[aria-disabled='true'] {
  pointer-events: none;
}

.c15:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c15:focus-visible {
  outline: none;
}

.c15:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c79 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c80[aria-disabled='true'] .c11 {
  color: #666687;
}

.c80[aria-disabled='true']:active .c11 {
  color: #666687;
}

.c16 {
  height: 2rem;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c16[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c16[aria-disabled='true'] .c11 {
  color: #666687;
}

.c16[aria-disabled='true'] svg > g,.c16[aria-disabled='true'] svg path {
  fill: #666687;
}

.c16[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c16[aria-disabled='true']:active .c11 {
  color: #666687;
}

.c16[aria-disabled='true']:active svg > g,.c16[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c16:hover {
  background-color: #f6f6f9;
}

.c16:active {
  background-color: #eaeaef;
}

.c16 .c11 {
  color: #32324d;
}

.c16 svg > g,
.c16 svg path {
  fill: #32324d;
}

.c18 {
  height: 2rem;
}

.c18[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c18[aria-disabled='true'] .c11 {
  color: #666687;
}

.c18[aria-disabled='true'] svg > g,.c18[aria-disabled='true'] svg path {
  fill: #666687;
}

.c18[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c18[aria-disabled='true']:active .c11 {
  color: #666687;
}

.c18[aria-disabled='true']:active svg > g,.c18[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c18:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c18:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c18 svg > g,
.c18 svg path {
  fill: #ffffff;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c36 {
  line-height: 0;
}

.c38 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c38::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38[aria-disabled='true'] {
  color: inherit;
}

.c38:focus {
  outline: none;
  box-shadow: none;
}

.c37 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c37:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c42 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  color: #666687;
  background: #eaeaef;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c42:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c51 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c51:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c48 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c48 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c48 svg path {
  fill: #666687;
}

.c49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
  cursor: not-allowed;
}

.c49 svg {
  width: 0.375rem;
}

.c53 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c53 svg {
  width: 0.375rem;
}

.c43 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c43:focus {
  outline: none;
}

.c43[data-disabled] {
  cursor: not-allowed;
}

.c44 {
  width: 100%;
}

.c31 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c55 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c32 {
  grid-column: span 6;
  max-width: 100%;
}

.c56 {
  grid-column: span 7;
  max-width: 100%;
}

.c77 {
  grid-column: span 5;
  max-width: 100%;
}

.c0:focus-visible {
  outline: none;
}

.c40 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c40:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c41 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c41::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41:focus-within {
  outline: none;
}

.c39 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c39 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c39 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c39 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c39 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c4 {
  padding-right: 8px;
}

.c6 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c3 svg path {
  fill: #4945ff;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c23 {
  margin-right: 24px;
}

.c23 svg {
  width: 2rem;
  height: 2rem;
}

.c26 {
  word-break: break-all;
}

@media (max-width:68.75rem) {
  .c32 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c32 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c56 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c56 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c77 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c77 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c4 c5"
              >
                <svg
                  fill="none"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 0 1-.2.2H5.74l8.239 8.239a.2.2 0 0 1 0 .282L12.14 23.86a.2.2 0 0 1-.282 0L.14 12.14a.2.2 0 0 1 0-.282L11.86.14a.2.2 0 0 1 .282 0L13.98 1.98a.2.2 0 0 1 0 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6Z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c6"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c7 c8"
          >
            <div
              class="c7 c9 c10"
            >
              <h1
                class="c11 c12"
              >
                My super token
              </h1>
            </div>
            <div
              class="c7 c13"
            >
              <button
                aria-disabled="false"
                class="c7 c14 c13 c15 c16"
                name="regenerate"
                type="button"
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <svg
                    fill="none"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M15.681 2.804A9.64 9.64 0 0 0 11.818 2C6.398 2 2 6.48 2 12c0 5.521 4.397 10 9.818 10 2.03 0 4.011-.641 5.67-1.835a9.987 9.987 0 0 0 3.589-4.831 1.117 1.117 0 0 0-.664-1.418 1.086 1.086 0 0 0-1.393.676 7.769 7.769 0 0 1-2.792 3.758 7.546 7.546 0 0 1-4.41 1.428V4.222h.002a7.492 7.492 0 0 1 3.003.625 7.61 7.61 0 0 1 2.5 1.762l.464.551-2.986 3.042a.186.186 0 0 0 .129.316H22V3.317a.188.188 0 0 0-.112-.172.179.179 0 0 0-.199.04l-2.355 2.4-.394-.468-.02-.02a9.791 9.791 0 0 0-3.239-2.293Zm-3.863 1.418V2v2.222Zm0 0v15.556c-4.216 0-7.636-3.484-7.636-7.778s3.42-7.777 7.636-7.778Z"
                      fill="#212134"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <span
                  class="c11 c17"
                >
                  Regenerate
                </span>
              </button>
              <button
                aria-disabled="false"
                class="c7 c14 c13 c15 c18"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <svg
                    fill="none"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 0 1 .286 0l2.85 2.89a.2.2 0 0 1 0 .28L9.554 20.854a.2.2 0 0 1-.285 0l-9.13-9.243a.2.2 0 0 1 0-.281l2.85-2.892a.2.2 0 0 1 .284 0l6.14 6.209L20.726 2.97Z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c11 c17"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c19"
      >
        <div
          class="c7 c20"
        >
          <div
            class="c7 c21 c10"
          >
            <div
              class="c7 c22 c10 c23"
            >
              <svg
                fill="none"
                height="1rem"
                viewBox="0 0 24 24"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 14h-4.34a6 6 0 1 1 0-4H23v4h-2v4h-4v-4ZM7 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                  fill="#8E8EA9"
                />
              </svg>
            </div>
            <div
              class="c7 c24"
            >
              <div
                class="c7 c10"
              >
                <span
                  class="c11 c25 c26"
                >
                  This token isn’t accessible anymore.
                </span>
              </div>
              <span
                class="c11 c27"
              >
                For security reasons, you can only see your token once.
              </span>
            </div>
          </div>
          <div
            class="c28"
          >
            <div
              class="c7 c29"
            >
              <h2
                class="c11 c30"
              >
                Details
              </h2>
              <div
                class="c31"
              >
                <div
                  class="c32"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class=""
                      >
                        <div
                          class="c7 c24"
                        >
                          <label
                            class="c11 c33 c34"
                            for="12"
                          >
                            Name
                            <span
                              class="c11 c35 c36"
                            >
                              *
                            </span>
                          </label>
                          <div
                            class="c7 c8 c37"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              aria-required="true"
                              class="c38"
                              id="12"
                              name="name"
                              value="My super token"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c32"
                >
                  <div
                    class=""
                  >
                    <div
                      class="c39"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="c7 c24"
                        >
                          <div
                            class="c7 c10"
                          >
                            <label
                              class="c11 c33 c34"
                              for="14"
                            >
                              Description
                            </label>
                          </div>
                          <div
                            class="c40"
                          >
                            <textarea
                              aria-invalid="false"
                              aria-required="false"
                              class="c41"
                              id="14"
                              name="description"
                            >
                              This describe my super token
                            </textarea>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c32"
                >
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="c7 c24"
                      >
                        <label
                          class="c11 c33 c34"
                          for="16"
                        >
                          Token duration
                          <span
                            class="c11 c35 c36"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="c7 c10 c42"
                          disabled=""
                        >
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="16 16-label 16-content"
                            aria-required="true"
                            class="c43"
                            data-disabled=""
                            disabled=""
                            id="16"
                            name="lifespan"
                            role="combobox"
                            type="button"
                          />
                          <div
                            class="c7 c8 c44"
                          >
                            <div
                              class="c7 c10"
                            >
                              <div
                                class="c45"
                              >
                                <span
                                  class="c11 c46"
                                  id="16-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c7 c10"
                            >
                              <button
                                aria-hidden="true"
                                class="c47 c48 c49"
                                disabled=""
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1rem"
                                  viewBox="0 0 14 8"
                                  width="1rem"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c11 c50"
                    >
                      Expiration date: Unlimited
                    </span>
                  </div>
                </div>
                <div
                  class="c32"
                >
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="c7 c24"
                      >
                        <label
                          class="c11 c33 c34"
                          for="18"
                        >
                          Token type
                          <span
                            class="c11 c35 c36"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="c7 c10 c51"
                        >
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="18 18-label 18-content"
                            aria-required="true"
                            class="c43"
                            id="18"
                            name="type"
                            role="combobox"
                            type="button"
                            value="read-only"
                          />
                          <div
                            class="c7 c8 c44"
                          >
                            <div
                              class="c7 c10"
                            >
                              <div
                                class="c45"
                              >
                                <span
                                  class="c11 c52"
                                  id="18-content"
                                >
                                  Read-only
                                </span>
                              </div>
                            </div>
                            <div
                              class="c7 c10"
                            >
                              <button
                                aria-hidden="true"
                                class="c47 c48 c53"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1rem"
                                  viewBox="0 0 14 8"
                                  width="1rem"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c54 c55"
          >
            <div
              class="c56"
            >
              <div
                class="c57"
              >
                <div
                  class="c7 c58"
                >
                  <h2
                    class="c11 c30"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c11 c27"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c59"
                >
                  <div
                    aria-disabled="false"
                    class="c60 c61"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c7 c62 c8 c63"
                    >
                      <div
                        class="c7 c64 c65"
                      >
                        <button
                          aria-controls="accordion-content-19"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-19"
                          class="c7 c66 c13 c67 c68"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c11 c69"
                          >
                            <span
                              class="c11 c70"
                              id="accordion-label-19"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c7 c65"
                        >
                          <span
                            aria-hidden="true"
                            class="c7 c71 c72"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c73 c74"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c60 c75"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c7 c76 c8 c63"
                    >
                      <div
                        class="c7 c64 c65"
                      >
                        <button
                          aria-controls="accordion-content-20"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-20"
                          class="c7 c66 c13 c67 c68"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c11 c69"
                          >
                            <span
                              class="c11 c70"
                              id="accordion-label-20"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c7 c65"
                        >
                          <span
                            aria-hidden="true"
                            class="c7 c71 c72"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c73 c74"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c77"
            >
              <div
                class="c78"
                style="min-height: 100%;"
              >
                <div
                  class="c7 c58"
                >
                  <h3
                    class="c11 c30"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c11 c27"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c79"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
